# cdk-ansible

./: .gitignore  Cargo.toml  Makefile  README.md  ansible-gen.code-workspace  cdk-ansible-sample-app.code-workspace  cdk-ansible.code-workspace  cdkam.code-workspace  dist-workspace.toml  mise.toml  release-plz.toml  renovate.json  tasks.toml
.github/workflows/: build-binaries.yml  cdk-ansible-cli-v-release.yml  release-plz-release-pr.yaml  release-plz-release.yaml  release-plz.yaml  release.yml  rust-ci.yaml
crates/cdk-ansible/: CHANGELOG.md  Cargo.toml
crates/cdk-ansible-cli/: CHANGELOG.md  Cargo.toml  build.rs  dist.toml
crates/cdk-ansible-cli/src/: arg.rs  lib.rs  settings.rs  version.rs
crates/cdk-ansible-cli/src/cli/: init.rs  mod.rs  module.rs
crates/cdk-ansible-cli/src/subcommand/: mod.rs  module.rs
crates/cdk-ansible-cli/src/utils/: convert_case.rs  mod.rs
crates/cdk-ansible-core/: CHANGELOG.md  Cargo.toml
crates/cdk-ansible-core/src/: lib.rs
crates/cdk-ansible-core/src/core/: mod.rs  types.rs
crates/cdk-ansible-core/src/task/ansible/builtin/: .gitignore  copy.rs  debug.rs  file.rs  mod.rs
crates/cdk-ansible-macro/: CHANGELOG.md  Cargo.toml
crates/cdk-ansible-macro/src/: inventory_derive.rs  lib.rs
crates/cdk-ansible-static/: CHANGELOG.md  Cargo.toml
crates/cdk-ansible-static/src/: lib.rs
crates/cdk-ansible-version/: Cargo.toml
crates/cdk-ansible/src/: arg.rs  lib.rs  main.rs  prelude.rs  settings.rs
crates/cdk-ansible/src/deploy/: mod.rs  types.rs
crates/cdk-ansible/src/deploy/cli/: deploy.rs  mod.rs  synth.rs
crates/cdk-ansible/src/inventory/: mod.rs
crates/cdk-ansible/src/l2/: mod.rs
crates/cdk-ansible/src/l2/deploy/: mod.rs  stack_container.rs
crates/cdk-ansible/src/l2/deploy/cli/: deploy.rs  mod.rs  synth.rs
crates/cdk-ansible/src/l2/types/: mod.rs  trait_impl.rs
crates/cdk-ansible/src/subcommand/: mod.rs  module.rs  synth.rs
crates/cdk-ansible/src/types/: mod.rs  trait_impl.rs
crates/cdk-ansible/src/utils/: mod.rs
crates/cdk-ansible/src/utils/test/: mod.rs
crates/cdkam/: CHANGELOG.md  Cargo.toml  README.md
crates/cdkam/src/: lib.rs
crates/cdkam/src/m/ansible/: mod.rs
crates/cdkam/src/m/ansible/builtin/: add_host.rs  apt.rs  apt_key.rs  apt_repository.rs  assemble.rs  assert.rs  async_status.rs  blockinfile.rs  command.rs  copy.rs  cron.rs  deb822_repository.rs  debconf.rs  debug.rs  dnf.rs  dnf5.rs  dpkg_selections.rs  expect.rs  fail.rs  fetch.rs  file.rs  find.rs  gather_facts.rs  get_url.rs  getent.rs  git.rs  group.rs  group_by.rs  hostname.rs  import_playbook.rs  import_role.rs  import_tasks.rs  include_role.rs  include_tasks.rs  include_vars.rs  iptables.rs  known_hosts.rs  lineinfile.rs  meta.rs  mod.rs  (+31 more)
crates/cdkam/src/m/ansible/posix/: acl.rs  at.rs  authorized_key.rs  firewalld.rs  firewalld_info.rs  mount.rs  patch.rs  rhel_rpm_ostree.rs  rpm_ostree_upgrade.rs  seboolean.rs  selinux.rs  synchronize.rs  sysctl.rs
crates/cdkam/src/m/community/general/: aerospike_migrations.rs  airbrake_deployment.rs  aix_devices.rs  aix_filesystem.rs  aix_inittab.rs  aix_lvg.rs  aix_lvol.rs  alerta_customer.rs  ali_instance.rs  ali_instance_info.rs  alternatives.rs  ansible_galaxy_install.rs  apache2_mod_proxy.rs  apache2_module.rs  apk.rs  apt_repo.rs  apt_rpm.rs  archive.rs  atomic_container.rs  atomic_host.rs  atomic_image.rs  awall.rs  beadm.rs  bearychat.rs  bigpanda.rs  bitbucket_access_key.rs  bitbucket_pipeline_key_pair.rs  bitbucket_pipeline_known_host.rs  bitbucket_pipeline_variable.rs  bootc_manage.rs  bower.rs  btrfs_subvolume.rs  bundler.rs  bzr.rs  campfire.rs  capabilities.rs  cargo.rs  catapult.rs  circonus_annotation.rs  cisco_webex.rs  (+549 more)
crates/test-suite/: Cargo.toml
crates/test-suite/tests/: cdk_ansible.rs  test_macro.rs
examples/cdkam_ansible/: Cargo.toml
examples/cdkam_ansible/src/m/ansible/builtin/: debug.rs  mod.rs
examples/sample_cdkam_ansible/: CHANGELOG.md  Cargo.toml
examples/sample_cdkam_ansible/src/: lib.rs
examples/sample_cdkam_ansible/src/m/ansible/builtin/: debug.rs  mod.rs
examples/simple-sample/: CHANGELOG.md  Cargo.toml
examples/simple-sample-for-cdkam/: CHANGELOG.md  Cargo.toml
examples/simple-sample/src/: lib.rs  main.rs  utils.rs
examples/simple-sample/src/inventory/: mod.rs
examples/simple-sample/src/playbooks/: mod.rs  playbook1.rs  playbook2.rs
tools/ansible/: .gitignore  ansible.cfg  pyproject.toml
tools/ansible/.config/: ansible-lint.yaml
tools/ansible/inventory/: dev.yaml  inventory.yaml  samplestack_sample.yaml
tools/ansible/playbooks/: 02_setup_control_node.yaml  SampleStack_seq0_par0_par0_sample0.yaml  SampleStack_seq0_par0_par1_sample1.yaml  SampleStack_seq0_par0_par2_sample2.yaml  SampleStack_seq0_par1_seq0_sample3.yaml  SampleStack_seq0_par1_seq1_sample4.yaml  SampleStack_seq0_par1_seq2_sample5.yaml  SampleStack_seq0_par2_sample6.yaml  SampleStack_seq0_par3_seq0_sample7.yaml  SampleStack_seq0_par3_seq2_sample9.yaml  SampleStack_seq1_seq1_sample8.yaml  debug.yaml  playbook1.yaml  playbook2.yaml  sample_seq0_sample1.yaml  sample_seq1_sample2.yaml  sample_seq2_par0_seq0_sample3.yaml  sample_seq2_par0_seq1_sample4.yaml  sample_seq2_par0_seq2_sample5.yaml  sample_seq2_par10_seq0_sample31.yaml  sample_seq2_par10_seq1_sample32.yaml  sample_seq2_par10_seq2_sample33.yaml  sample_seq2_par1_sample6.yaml  sample_seq2_par2_seq0_sample7.yaml  sample_seq2_par2_seq1_sample8.yaml  sample_seq2_par2_seq2_sample9.yaml  sample_seq2_par3_seq0_sample10.yaml  sample_seq2_par3_seq1_sample11.yaml  sample_seq2_par3_seq2_sample12.yaml  sample_seq2_par4_seq0_sample13.yaml  sample_seq2_par4_seq1_sample14.yaml  sample_seq2_par4_seq2_sample15.yaml  sample_seq2_par5_seq0_sample16.yaml  sample_seq2_par5_seq1_sample17.yaml  sample_seq2_par5_seq2_sample18.yaml  sample_seq2_par6_seq0_sample19.yaml  sample_seq2_par6_seq1_sample20.yaml  sample_seq2_par6_seq2_sample21.yaml  sample_seq2_par7_seq0_sample22.yaml  sample_seq2_par7_seq1_sample23.yaml  (+8 more)
tools/publish/: increment-version.sh  publish.sh
tools/test/: check_modules.sh  version.sh
xtasks/: prepare  publish
(+23 files in other folders)
