[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
description = "cdk-ansible is a tool to generate Ansible playbooks from Rust code."
homepage = "https://github.com/pollenjp/cdk-ansible"
documentation = "https://docs.rs/cdk-ansible"
repository = "https://github.com/pollenjp/cdk-ansible"
authors = ["pollenjp <polleninjp@gmail.com>"]
license = "MIT"
keywords = ["ansible", "cdk", "cdk-ansible"]

[workspace.dependencies]
cdk-ansible = { version = "0.3", path = "crates/cdk-ansible" }
cdk-ansible-cli = { version = "0.2", path = "crates/cdk-ansible-cli" }
cdk-ansible-core = { version = "0.1", path = "crates/cdk-ansible-core" }
cdk-ansible-static = { version = "0.1", path = "crates/cdk-ansible-static" }
cdk-ansible-macro = { version = "0.1", path = "crates/cdk-ansible-macro" }

anyhow = { version = "1.0.102" }
cargo_toml = "0.22.3"
chrono = "0.4"
clap = { version = "4.5.60", features = [
    "derive",
    "env",
    "string",
    "wrap_help",
] }
convert_case = "0.8.0"
dyn-clone = "1.0.20"
erased-serde = "0.4.9"
fs-err = "3.3.0"
futures = "0.3.32"
indexmap = { version = "2.13.0", features = ["serde"] }
proc-macro2 = "1.0.106"
quote = "1.0.44"
regex = "1.12.3"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
shlex = "1.3.0"
syn = { version = "2.0.117", features = ["full"] }
tempfile = { version = "3" }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
toml = "0.9.12"
toml_edit = "0.23.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]

[workspace.lints.clippy]

# # category
# #
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
# restriction = { level = "warn", priority = -1 }
# # cargo = "warn"

# style
#
# get_first = "allow"
new_without_default = "allow"

# # nursery
# #
# branches_sharing_code = "allow"

# # restriction
# #
# # https://rust-lang.github.io/rust-clippy/master/index.html#blanket_clippy_restriction_lints
# blanket_clippy_restriction_lints = "allow"
# absolute_paths = "allow"
# arbitrary_source_item_ordering = "allow"
# implicit_return = "allow"
# min_ident_chars = "allow"
# missing_docs_in_private_items = "allow"
# mod_module_files = "allow"
# # FIXME: later
# print_stdout = "allow"
# pub_use = "allow"
# pub_with_shorthand = "allow"
# question_mark_used = "allow"
# self_named_module_files = "allow"
# shadow_reuse = "allow"
# shadow_same = "allow"
# shadow_unrelated = "allow"
# single_call_fn = "allow"
# single_char_lifetime_names = "allow"
# std_instead_of_alloc = "allow"
# string_add = "allow"
# string_add_assign = "allow"
use_debug = "allow"
