[package]
name = "cdk-ansible-cli"
# Use workspace value because 'version' function is defined in this crate
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdk-ansible-cli"
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cdk-ansible-static.workspace = true
cdk-ansible-core.workspace = true
cdk-ansible-macro.workspace = true

anyhow.workspace = true
cargo_toml.workspace = true
clap.workspace = true
fs-err.workspace = true
indexmap.workspace = true
quote.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
toml.workspace = true

[build-dependencies]
cdk-ansible-static.workspace = true

anyhow.workspace = true
regex.workspace = true
fs-err.workspace = true

[lints.clippy]

# category
#
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# cargo = "warn"

# style
#
get_first = "allow"

# nursery
#
branches_sharing_code = "allow"

# restriction
#
# https://rust-lang.github.io/rust-clippy/master/index.html#blanket_clippy_restriction_lints
blanket_clippy_restriction_lints = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
mod_module_files = "allow"
# FIXME: later
print_stdout = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_char_lifetime_names = "allow"
