[package]
name = "cdk-ansible-cli"
version = "0.2.5"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdk-ansible-cli"
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.binstall]
# https://github.com/cargo-bins/cargo-binstall/blob/6010abb1da3dbaae07e8823fa57c0cd7cf183245/SUPPORT.md
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"

[dependencies]
cdk-ansible-static.workspace = true
cdk-ansible-core.workspace = true
cdk-ansible-macro.workspace = true

anyhow.workspace = true
cargo_toml.workspace = true
clap.workspace = true
convert_case.workspace = true
fs-err.workspace = true
indexmap.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true

[build-dependencies]
cdk-ansible-static.workspace = true

anyhow.workspace = true
regex.workspace = true
fs-err.workspace = true

[lints.rust]
# clippy::redundant_pub_crate conflicts with rustc::unreachable_pub #5369
# https://github.com/rust-lang/rust-clippy/issues/5369
# unreachable-pub = "warn"

[lints.clippy]

# category
#
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# cargo = "warn"

# style
#
get_first = "allow"

# pedantic
#
missing_errors_doc = "allow"
too_many_lines = "allow"

# nursery
#
branches_sharing_code = "allow"

# restriction
#
# https://rust-lang.github.io/rust-clippy/master/index.html#blanket_clippy_restriction_lints
blanket_clippy_restriction_lints = "allow"
absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
mod_module_files = "allow"
# FIXME: later
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
string_add = "allow"
string_add_assign = "allow"
