[package]
name = "cdk-ansible-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dyn-clone.workspace = true
erased-serde.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
