[package]
name = "cdk-ansible-core"
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdk-ansible-core"
repository.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dyn-clone.workspace = true
erased-serde.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
