[package]
name = "cdk-ansible-macro"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdk-ansible-macro"
repository.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.release]
tag-name = "{{prefix}}v{{version}}"

[dependencies]
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true
