[package]
name = "cdk-ansible-macro"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdk-ansible-macro"
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true
