[package]
name = "cdk-ansible-static"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdk-ansible-static"
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdk-ansible-macro.workspace = true
