[package]
name = "cdk-ansible"
# Use workspace value because 'version' function is defined in 'cdk-ansible-cli' crate
# and these values should be the same.
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cdk-ansible-cli.workspace = true
cdk-ansible-core.workspace = true
cdk-ansible-macro.workspace = true

anyhow.workspace = true
cargo_toml.workspace = true
clap.workspace = true
fs-err.workspace = true
indexmap.workspace = true
quote.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
toml.workspace = true
