[package]
name = "cdk-ansible"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cdk-ansible-core.workspace = true
cdk-ansible-macro.workspace = true

anyhow.workspace = true
clap.workspace = true
convert_case.workspace = true
futures.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
