[package]
name = "cdkam"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cdk-ansible = { workspace = true }

indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
