[package]
name = "cdkam"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdkam"
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cdk-ansible = { workspace = true }

[features]
ansible = ["ansible-builtin"]
ansible-builtin = []
community = ["community-general"]
community-general = []
