[package]
name = "cdkam"
version = "0.2.5"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cdkam"
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cdk-ansible = { workspace = true }

[features]
default = ["ansible", "community"]
ansible = ["ansible-builtin", "ansible-posix"]
ansible-builtin = []
ansible-posix = []
community = ["community-general"]
community-general = []
