[package]
name = "test-suite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdk-ansible.workspace = true

anyhow.workspace = true
indexmap.workspace = true
serde_json.workspace = true

[lints]
workspace = true
