[package]
edition = "2021"
name = "cdkam_ansible"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
# cdk-ansible = "0.0.3"
cdk-ansible.workspace = true # Modify manually

[dependencies.indexmap]
version = "2.7.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.138"
features = ["preserve_order"]
