[package]
name = "sample_cdkam_ansible"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow.workspace = true
cdk-ansible-core.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
ansible = ["ansible-builtin"]
ansible-builtin = ["ansible-builtin-command", "ansible-builtin-debug", "ansible-builtin-shell"]
ansible-builtin-debug = []
ansible-builtin-shell = []
ansible-builtin-command = []
