[package]
name = "simple-sample"
version = "0.1.0"
edition = "2021"
authors = ["pollenjp <pollenjp@example.com>"]
license = "MIT"
rust-version.workspace = true

[dependencies]
cdk-ansible.workspace = true
cdk-ansible-macro.workspace = true
cdkam_ansible.path = "../cdkam_ansible"

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints.clippy]

# category
#
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# cargo = "warn"

# style
#
get_first = "allow"

# nursery
#
branches_sharing_code = "allow"

# restriction
#
# https://rust-lang.github.io/rust-clippy/master/index.html#blanket_clippy_restriction_lints
blanket_clippy_restriction_lints = "allow"
absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
dbg_macro = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing-errors-doc = "allow"
mod_module_files = "allow"
# FIXME: later
print_stdout = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
