[package]
name = "simple-sample"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdk-ansible.workspace = true
sample_cdkam_ansible = { path = "../sample_cdkam_ansible", features = [
    "ansible-builtin",
] }

anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
indexmap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints.clippy]

# style
#
new_without_default = "allow"
