[project]
name = "playbook-output"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = ["ansible>=10.3.0"]

[dependency-groups]
dev = ["ansible-lint>=24.10.0", "ansible-lint-custom-strict-naming"]

[tool.uv]
# FIXME: https://github.com/astral-sh/uv/issues/6127#issuecomment-2298975659
environments = ["platform_system != 'Windows'"]

[tool.uv.sources]
# FIXME:
ansible-lint-custom-strict-naming = { git = "https://github.com/pollenjp/ansible-lint-custom-strict-naming.git", branch = "release/v1.1.3" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
